change the way it loads social icons

--- a/css/index.styl
+++ b/css/index.styl
@@ -1,7 +1,7 @@
 .auth0-lock
   @require "_normalize"
 
-@require "social_icons.css"
+@import "social_icons"
 @import "_animate"
 @import "_transitions"
 @import "_mixins&keyframes"
